--- a/eeg-graph-learning/.gitignore
+++ b/eeg-graph-learning/.gitignore
@@ -24,6 +24,10 @@ var/
 /data/*
 !/data/.gitkeep
 
+/tests/test_data/*
+!/tests/test_data/.gitkeep
+/tests/test_preproccessing_pipeline.py
+
 # Jupyter Notebooks
 .ipynb_checkpoints
 
