--- a/eeg-graph-learning/.gitignore
+++ b/eeg-graph-learning/.gitignore
@@ -24,9 +24,7 @@ var/
 /data/*
 !/data/.gitkeep
 
-tests/test_data/data/cleaned/sub-19740274/ses-1/eeg/*
-tests/test_data/TDBRAIN-dataset/derivatives/sub-88046393/ses-1/eeg/*
-/tests/test_data/*
+tests/test_data/*
 !/tests/test_data/.gitkeep
 
 # Jupyter Notebooks
