--- a/eeg-graph-learning/.gitignore
+++ b/eeg-graph-learning/.gitignore
@@ -23,7 +23,7 @@ var/
 # Data directories
 /data/*
 !/data/.gitkeep
-
+setup_
 # Test data
 tests/test_data/*
 tests/test_data/data/cleaned/sub-19740274/ses-1/eeg/*
@@ -45,6 +45,7 @@ tests/test_data/TDBRAIN-dataset/derivatives/sub-88046393/ses-1/eeg/*
 env/
 venv/
 ENV/Ê
+setup_my_env_vars.sh
 
 #  misc
 create_directory_structure.py
